# lefshift

./: .pylintrc  QM Assisted ML Tutorial.md  README.md  pyproject.toml
data/: train.csv
lefshift/: __main__.py  application_utils.py  constants.py  fp.py  model.py  predict.py  split.py  train.py  utils.py
models/fds-1000/: CF2_training.csv  CF3_training.csv  CF_training.csv
models/fds-1000_qm_assistance/: CF2_training.csv  CF3_training.csv  CF_training.csv
tests/: __init__.py  application_utils_tests.py  fp_tests.py  main_tests.py  model_tests.py  utils_tests.py
tests/data/: test_data.csv  test_data_custom_columns.csv
tests/data/test_model/: CF.json  CF2.json  CF2_bounds.csv  CF2_parameters.json  CF2_training.csv  CF3.json  CF3_bounds.csv  CF3_parameters.json  CF3_training.csv  CF_bounds.csv  CF_parameters.json  CF_training.csv
