[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "lefshift"
version = "0.5.0"
authors = [
    {name = "Patrick Penner"},
]
requires-python = ">=3.8"
dependencies = [
   "numpy>=1.23.5",
   "pandas>=1.5.2",
   "rdkit>=2022.09.3",
   "scikit-learn>=1.2.0",
   "xgboost>=1.7.1",
]

[project.scripts]
lefshift = "lefshift.__main__:main"

[tool.setuptools]
packages = ["lefshift"]
